--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<head>
+<html lang="en">
 
+<head>
+    <title>MAP</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div class="para" id="p1">
         <h1>Diamond Light Source Map</h1>
         <p>Welcome</p>
     </div>
