--- a/index.html
+++ b/index.html
@@ -10,4 +10,9 @@
         <h1>Diamond Light Source Map</h1>
         <p>Welcome</p>
     </div>
+    <button onclick="warn()">Press</button>
+    
+    <button onclick="test()">Position</button>
+    <script src="map.js"></script>
+    <script src="test.js"></script>
 </body>
