--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
 
 <head>
-    <title>MAP</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Map</title>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+        crossorigin=""/>
 </head>
 <body>
-    <div class="para" id="p1">
-        <h1>Diamond Light Source Map</h1>
-        <p>Welcome</p>
+    <div id="map">
+        
     </div>
-    <button onclick="warn()">Press</button>
-    
-    <button onclick="test()">Position</button>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""></script>   
     <script src="map.js"></script>
-    <script src="test.js"></script>
 </body>
